refactor: 升级Java版本至17并修复兼容性问题
- 将项目编译目标从Java 8升级到Java 17
- 迁移fmt-maven-plugin到Spotify维护的2.29版本
- 修复Java版本号解析逻辑以支持新格式
- 添加必要的JVM参数(--add-opens)确保Java 17兼容性
- 更新相关文档说明升级过程和验证结果