@@ -42,6 +42,14 @@ public class CaptureTsumeGo {
     try {
       List<String> jvmArgs = new ArrayList<String>();
       jvmArgs.add("-Dsun.java2d.uiScale=1.0");
+      if (Lizzie.javaVersion >= 17) {
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.desktop/sun.awt=ALL-UNNAMED");
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.desktop/java.awt=ALL-UNNAMED");
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.base/java.lang=ALL-UNNAMED");
+      }
       List<String> appArgs = new ArrayList<String>();
       appArgs.add(String.valueOf(Lizzie.config.captureBlackOffset));
       appArgs.add(String.valueOf(Lizzie.config.captureBlackPercent));
